# dotfiles

./: .bash_aliases  .bash_history  .bash_profile  .bashrc  .gitignore
.config/: .gitignore  mimeapps.list
.config/alacritty/: alacritty.toml  alacritty.yml
.config/bash/: .bash_aliases  .bash_display  .bashrc  .gitignore  bash_aliases  bash_display  bashrc
.config/cabal/: config
.config/clangd/: config.yaml
.config/fish/: .gitignore  config.fish
.config/git/: config  ignore
.config/gtk-3.0/: settings.ini
.config/i3/: config
.config/i3blocks/: config
.config/mako/: config
.config/nushell/: config.nu  env.nu
.config/nvim/: init.lua  lazy-lock.json
.config/r/: Renviron
.config/sway/: applist  binmenu.sh  config  custom_menu.fish  lock.sh  menu.sh  style.conf  swayidle
.config/swayidle/: config
.config/tmux/: presets  tmux.conf
.config/waybar/: config  style.css
.config/wofi/: config
.config/xdg-desktop-portal-wlr/: config
.config/zellij/: config.kdl
.dotfiles/: install.sh  mute-in-eduroam.sh  uni-druck.sh
.dotfiles/docs/: bios  cups  eduroam  firefox  kernel-cmdline  mkinitcpio.conf  packages  reboot  screenshare  secrets  sftp  startmenu  steam  thunderbird
.dotfiles/sessions/: .gitignore  config.json  dotfiles.json  notes.json  template.json  tmp.json  usb.json
.dotfiles/sway-status/: meson.build
.dotfiles/sway-status/include/: init_functions.h  modules.h
.dotfiles/sway-status/src/: battery.c  idle_inhibit.c  main.c  meson.build  time.c  volume.c
.dotfiles/sway-status/test/: network.c  pipewire.c
(+104 files in other folders)
